feat: header html done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Completed - Bruno</title>
+    <title>Portfolio</title>
     <!-- !BOX ICONS -->
     <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -16,6 +16,41 @@
 <body>
     <!-- !HEADER -->
     
+    <header class="header" id="home">
+      <nav class="navbar container">
+        <a href="./index.html" class="logo">Bruno.</a>
+        <div class="navbar-buttons">
+          <button type="button" class="button icon-button menu-toogle-button">
+            <i class="bx bx-menu open-icon"></i>
+            <i class="bx bx-x close-icon"></i>
+          </button>
+          <button type="button" class="button icon-button theme-toogle-button">
+            <i class="bx bx-toggle-left theme-off"></i>
+            <i class="bx bx-toggle-right theme-on"></i>
+          </button>
+        </div>
+        <div class="menu">
+          <ul class="list">
+            <li class="list-item">
+              <a href="#" class="list-link">
+                <span>01</span> About me
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="list-link">
+                <span>02</span> Portfolio
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#" class="list-link">
+                <span>03</span> Contact
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <!-- !HERO SECTION -->
 
     <!-- !ABOUT SECTION -->
