feat: hero html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 
     <!-- !HERO SECTION -->
 
+    <section class="hero section">
+      <div class="container">
+        <h1 class="title main-title">
+          Crea<span class="inline-image has-sparkles"></span>tive
+          <br>UX/UI Designer
+          <br>Develope<span class="has-sparkles-alt">r</span>
+        </h1>
+      </div>
+    </section>
+
     <!-- !ABOUT SECTION -->
     
     <!-- Hi, I'm <span class="text-bold">Bruno</span>, and in my <span class="text-bold">five years</span> as a <span class="text-bold">designer and developer</span>, I have turned hundreds of my client's <span class="text-bold">ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my <span class="text-bold">passion</span>. -->
