feat: about me html

--- a/index.html
+++ b/index.html
@@ -65,8 +65,46 @@
 
     <!-- !ABOUT SECTION -->
     
-    <!-- Hi, I'm <span class="text-bold">Bruno</span>, and in my <span class="text-bold">five years</span> as a <span class="text-bold">designer and developer</span>, I have turned hundreds of my client's <span class="text-bold">ideas into reality</span>. Developing and creating beautiful interactive user interfaces is my <span class="text-bold">passion</span>. -->
+    <section class="about-me section" id="about-me">
+      <div class="container">
+        
+        <div class="section-description d-grid">
+          <div class="scroll-reveal-left">
+            <p class="description">
+              Hi, I'm <span class="text-bold">Bruno</span>, and in my <span class="text-bold">five years</span> 
+              as a <span class="text-bold">designer and developer</span>, I have turned hundreds of my client's 
+              <span class="text-bold">ideas into reality</span>. Developing and creating beautiful interactive user 
+              interfaces is my <span class="text-bold">passion</span>.
+            </p>
+          </div>
+          <div class="scroll-reveal-right">
+            <div class="description-image has-sparkles">
+              <img src="./assets/images/bruno.png" alt="Bruno's face">
+            </div>
+          </div>
+        </div>
 
+        <div class="tech-stack d-grid">
+          <div class="tech-stack-item" data-tooltip="HTML5">
+            <i class="bx bxl-html5"></i>
+          </div>
+          <div class="tech-stack-item" data-tooltip="CSS3">
+            <i class="bx bxl-css3"></i>
+          </div>
+          <div class="tech-stack-item" data-tooltip="JAVASCRIPT">
+            <i class="bx bxl-javascript"></i>
+          </div>
+          <div class="tech-stack-item" data-tooltip="REACT">
+            <i class="bx bxl-react"></i>
+          </div>
+          <div class="tech-stack-item" data-tooltip="SKETCH">
+            <i class="bx bxl-sketch"></i>
+          </div>
+        </div>
+
+      </div>
+    </section>    
+  
     <!-- !PORTFOLIO SECTION -->
 
     <!-- !CONTACT SECTION -->
