--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
           <div class="tech-stack-item" data-tooltip="CSS3">
             <i class="bx bxl-css3"></i>
           </div>
-          <div class="tech-stack-item" data-tooltip="JAVASCRIPT">
+          <div class="tech-stack-item" data-tooltip="Javascript">
             <i class="bx bxl-javascript"></i>
           </div>
-          <div class="tech-stack-item" data-tooltip="REACT">
+          <div class="tech-stack-item" data-tooltip="React">
             <i class="bx bxl-react"></i>
           </div>
-          <div class="tech-stack-item" data-tooltip="SKETCH">
+          <div class="tech-stack-item" data-tooltip="Sketch">
             <i class="bx bxl-sketch"></i>
           </div>
         </div>
