feat: portfolio html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,89 @@
     </section>    
   
     <!-- !PORTFOLIO SECTION -->
+    <section class="portfolio section" id="portfolio">
+      <div class="container">
+
+        <div class="section-title-container">
+          <h2 class="title section-title">Recent</h2>
+          <div class="section-subtitle-container">
+            <span class="subtitle-number has-sparkles">02</span>
+            <h5 class="title section-title">Projects</h5>
+          </div>
+        </div>
+
+        <div class="portfolio-cards d-grid">
+
+          <a href="#" class="portfolio-card portfolio-card-1">
+            <div class="card-image">
+              <img src="./assets/images/mntn.png" alt="mntn page">
+            </div>
+            <div class="card-heading">
+              <div class="card-title">
+                <h5 class="card-title">MNTN</h5>
+                <span class="card-subtitle">Web desing & development</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="portfolio-card portfolio-card-2">
+            <div class="card-image">
+              <img src="./assets/images/blockchained.png" alt="blockchained page">
+            </div>
+            <div class="card-heading">
+              <div class="card-title">
+                <h5 class="card-title">Blockchained</h5>
+                <span class="card-subtitle">App design</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="portfolio-card portfolio-card-3">
+            <div class="card-image">
+              <img src="./assets/images/recehtok.png" alt="recehtok page">
+            </div>
+            <div class="card-heading">
+              <div class="card-title">
+                <h5 class="card-title">Recehtok</h5>
+                <span class="card-subtitle">Dashboard design</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="portfolio-card portfolio-card-4">
+            <div class="card-image">
+              <img src="./assets/images/rsound.png" alt="rsound page">
+            </div>
+            <div class="card-heading">
+              <div class="card-title">
+                <h5 class="card-title">Rsound</h5>
+                <span class="card-subtitle">Web desing</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="portfolio-card portfolio-card-5">
+            <div class="card-image">
+              <img src="./assets/images/landie.png" alt="Landie page">
+            </div>
+            <div class="card-heading">
+              <div class="card-title">
+                <h5 class="card-title">Landie</h5>
+                <span class="card-subtitle">Web desing & development</span>
+              </div>
+            </div>
+          </a>
+
+          <div href="#" class="portfolio-card portfolio-card-6 large-button-container">
+            <a href="#" class="large-button button-fill">
+              View
+              <br> All
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </section>  
 
     <!-- !CONTACT SECTION -->
     
