feat: portfolio css styling / html fix

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h2 class="title section-title">Recent</h2>
           <div class="section-subtitle-container">
             <span class="subtitle-number has-sparkles">02</span>
-            <h5 class="title section-title">Projects</h5>
+            <h5 class="title section-subtitle">Projects</h5>
           </div>
         </div>
 
